RP-1078 Address SQ feedback